2067 uninitialized variables in zfs(1M) may make snapshots undestroyable